--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "cube-ui": "~1.12.15",
+    "eslint-utils": "^1.4.2",
     "vue": "^2.6.10"
   },
   "devDependencies": {
