--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "cube-ui": "~1.12.15",
     "eslint-utils": "^1.4.2",
+    "moment": "^2.24.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
