--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "core-js": "^2.6.5",
     "cube-ui": "~1.12.15",
     "eslint-utils": "^1.4.2",
+    "good-storage": "^1.1.0",
     "moment": "^2.24.0",
+    "query-string": "^6.8.3",
     "vue": "^2.6.10"
   },
   "devDependencies": {
